--- a/index.html
+++ b/index.html
@@ -878,3 +878,8 @@
                     heart.remove();
                 }, 6000);
             }, 300);
+        }
+    </script>
+</body>
+
+</html>
