Fix image URLs and enhance wishlist textarea
Updated image URLs and improved textarea placeholder formatting.

--- a/index.html
+++ b/index.html
@@ -564,23 +564,23 @@
                 <h3>📸 Galeri Kenangan 📸</h3>
                 <div class="gallery-grid" id="galleryGrid">
                     <div class="gallery-item" data-index="0">
-                        <img src="https://i.ibb.co.com/1f87BTJp/Whats-App-Image-2025-12-14-at-21-46-56.jpg"
+                        <img src="https://i.ibb.co/1f87BTJp/Whats-App-Image-2025-12-14-at-21-46-56.jpg"
                             alt="Namira Memory 1">
                     </div>
                     <div class="gallery-item" data-index="1">
-                        <img src="https://i.ibb.co.com/5XPHdygP/Whats-App-Image-2025-12-14-at-21-46-34.jpg"
+                        <img src="https://i.ibb.co/5XPHdygP/Whats-App-Image-2025-12-14-at-21-46-34.jpg"
                             alt="Namira Memory 2">
                     </div>
                     <div class="gallery-item" data-index="2">
-                        <img src="https://i.ibb.co.com/JWyvFTbJ/Whats-App-Image-2025-12-14-at-21-45-37.jpg"
+                        <img src="https://i.ibb.co/JWyvFTbJ/Whats-App-Image-2025-12-14-at-21-45-37.jpg"
                             alt="Namira Memory 3">
                     </div>
                     <div class="gallery-item" data-index="3">
-                        <img src="https://i.ibb.co.com/pBvmmDSV/d2e3b029-1ae0-46e7-b551-6ea7e2845c76.jpg"
+                        <img src="https://i.ibb.co/pBvmmDSV/d2e3b029-1ae0-46e7-b551-6ea7e2845c76.jpg"
                             alt="Namira Memory 4">
                     </div>
                     <div class="gallery-item" data-index="4">
-                        <img src="https://i.ibb.co.com/0phdJqkN/6faa15f8-6b05-4c3f-b5b1-9e9aa4074144.jpg"
+                        <img src="https://i.ibb.co/0phdJqkN/6faa15f8-6b05-4c3f-b5b1-9e9aa4074144.jpg"
                             alt="Namira Memory 5">
                     </div>
                 </div>
@@ -588,8 +588,13 @@
 
             <div class="wishlist-section">
                 <h3>✨ Tulis Wishlist Kamu ✨</h3>
-                <textarea class="wishlist-input" id="wishlistText"
-                    placeholder="Tulis keinginan atau harapan untuk ulang tahun kamu di sini...&#10;&#10;Contoh:&#10;- Liburan ke Bali&#10;- Gadget baru&#10;- Waktu berkualitas dengan keluarga&#10;- dll."></textarea>
+                <textarea class="wishlist-input" id="wishlistText" placeholder="Tulis keinginan atau harapan untuk ulang tahun kamu di sini...
+
+Contoh:
+- Liburan ke Bali
+- Gadget baru
+- Waktu berkualitas dengan keluarga
+- Momen spesial dengan sahabat"></textarea>
                 <button class="btn-whatsapp" id="sendWhatsapp">
                     <span style="font-size: 24px;">📱</span>
                     Kirim via WhatsApp
